--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ apispec==3.3.2
 async-generator==1.10
 async-timeout==3.0.1
 attrs==21.2.0
+Authlib==0.15.5
 Babel==2.9.1
 backoff==1.11.1
 billiard==3.6.4.0
+black==21.9b0
 bleach==3.3.1
 Brotli==1.0.9
 cachelib==0.1.1
@@ -60,12 +62,16 @@ marshmallow-enum==1.5.1
 marshmallow-sqlalchemy==0.26.1
 msgpack==1.0.2
 multidict==5.2.0
+mypy-extensions==0.4.3
 numpy==1.21.3
 outcome==1.1.0
 packaging==21.0
 pandas==1.2.5
 parsedatetime==2.6
+pathspec==0.9.0
 pgsanity==0.2.9
+Pillow==8.4.0
+platformdirs==2.4.0
 polyline==1.4.0
 prison==0.2.1
 pyarrow==4.0.1
@@ -82,6 +88,7 @@ python3-openid==3.2.0
 pytz==2021.3
 PyYAML==6.0
 redis==3.5.3
+regex==2021.10.23
 selenium==4.0.0
 simplejson==3.17.5
 six==1.16.0
@@ -92,6 +99,7 @@ SQLAlchemy==1.3.24
 SQLAlchemy-Utils==0.36.8
 sqlparse==0.3.0
 tabulate==0.8.9
+tomli==1.2.2
 trio==0.19.0
 trio-websocket==0.9.2
 typing-extensions==3.10.0.2
